@@ -1,3 +1,5 @@
+#26  Add ability to manually sort Settings within a Group
+#25  Add ability to manually sort Groups
 #21  Add Filter on Group for settings.
 #24  Remember last visited tab in both admin and client view.
 #22  Add "Help!" button on Admin panel linking to RTFM instructions.
